
TESTS = test.sh

EXTRA_DIST = test.sh

tests_input = \
   array-add-unique/01.in \
   array-add-unique/02.in \
   array-concat/01.in \
   array-member/01.in \
   array-member/02.in \
   array-push/01.in \
   array-shift/01.in \
   array-shift/02.in \
   array-shift/03.in \
   array-shift/04.in \
   array-size/01.in \
   attributes-extract/01.in \
   attributes-extract/02.in \
   attributes-extract/03.in \
   attributes-quote/01.in \
   attributes-quote/02.in \
   attributes-remove/01.in \
   attributes-remove/02.in \
   attributes-remove/03.in \
   capitalize/01.in \
   capitalize/02.in \
   char-offsets/01.in \
   char-offsets/02.in \
   char-offsets/03.in \
   comment/01.in \
   comment/02.in \
   comment/03.in \
   define-tag/01.in \
   define-tag/02.in \
   define-tag/03.in \
   define-tag/04.in \
   define-tag/05.in \
   define-tag/06.in \
   directory-contents/01.in \
   divert/01.in \
   downcase/01.in \
   downcase/02.in \
   entity/01.in \
   entity/02.in \
   entity/03.in \
   entity/04.in \
   file-exists/01.in \
   foreach/01.in \
   function-def/01.in \
   get-file-properties/01.in \
   if/01.in \
   if/02.in \
   ifeq/01.in \
   ifeq/02.in \
   ifeq/03.in \
   ifneq/01.in \
   ifneq/02.in \
   ifneq/03.in \
   include/01.in \
   include/02.in \
   increment/01.in \
   let/01.in \
   let/02.in \
   let/03.in \
   match/01.in \
   match/02.in \
   match/03.in \
   match/04.in \
   match/05.in \
   match/06.in \
   Misc/01.in \
   Misc/02.in \
   Misc/03.in \
   Misc/04.in \
   Misc/05.in \
   printf/01.in \
   printf/02.in \
   real-path/01.in \
   set-var/01.in \
   set-var/02.in \
   set-var/03.in \
   set-var/04.in \
   set-var/05.in \
   set-var/06.in \
   set-var/07.in \
   set-var/08.in \
   sort/01.in \
   sort/02.in \
   sort/03.in \
   string-compare/01.in \
   string-compare/02.in \
   string-eq/01.in \
   string-eq/02.in \
   string-eq/03.in \
   string-eq/04.in \
   string-length/01.in \
   string-length/02.in \
   string-length/03.in \
   string-length/04.in \
   string-neq/01.in \
   string-neq/02.in \
   string-neq/03.in \
   string-neq/04.in \
   subst-in-string/01.in \
   subst-in-string/03.in \
   subst-in-string/04.in \
   subst-in-string/05.in \
   subst-in-var/01.in \
   subst-in-var/03.in \
   symbol-info/01.in \
   symbol-info/02.in \
   symbol-info/03.in \
   symbol-info/04.in \
   undef/01.in \
   upcase/01.in \
   upcase/02.in \
   var-case/01.in \
   var-case/02.in \
   var-case/03.in \
   when/01.in \
   while/01.in \
   while/02.in

other_input = include/01.inc

dist_noinst_DATA = $(tests_input) $(other_input) $(tests_input:.in=.ok)

CLEANFILES = */*.out

